<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyInvoicesActivity">

    <TextView
        android:id="@+id/titleMyInvoices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:text="@string/my_invoices"
        android:textSize="26sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTotalProfit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleMyInvoices"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/pale_blue"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="vertical"
            android:outlineSpotShadowColor="@color/black">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <!--            android:layout_gravity="center">-->

                <TextView
                    android:id="@+id/lblTotalProfit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:text="Total for all invoices £"
                    android:textSize="16sp"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardViewTotalProfit"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/pale_blue"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="vertical"
            android:outlineSpotShadowColor="@color/black">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <!--            android:layout_gravity="center">-->

                <TextView
                    android:id="@+id/lblTotalInvoices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:text="You have shared "
                    android:textSize="16sp"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <!--            android:layout_gravity="center">-->

                <TextView
                    android:id="@+id/lblPaidInvoices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:textSize="16sp"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <!--            android:layout_gravity="center">-->

                <TextView
                    android:id="@+id/lblUnpaidInvoices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:textSize="16sp"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>
        <!--        <TextView-->
        <!--            android:id="@+id/totalInvoices"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_below="@+id/titleMyInvoices"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            android:paddingTop="2dp"-->
        <!--            android:text="You have shared "-->
        <!--            android:visibility="invisible" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/paidInvoices"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_below="@+id/totalInvoices"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            android:paddingTop="2dp"-->
        <!--            android:text="Paid: "-->
        <!--            android:visibility="invisible" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/unpaidInvoices"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_below="@+id/paidInvoices"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            android:paddingTop="2dp"-->
        <!--            android:text="Unpaid: "-->
        <!--            android:visibility="invisible" />-->
        <!--        </LinearLayout>-->
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGraph"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/cardViewStats"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/pale_blue"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <org.eazegraph.lib.charts.PieChart
                android:id="@+id/paidStatusChart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:padding="6dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <View
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:background="@color/green" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="Paid" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp">

                    <View
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:background="@color/red" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="Unpaid" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

<!--    <Button-->
<!--        android:id="@+id/btnViewInvoices"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/cardViewGraph"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:text="View Invoices" />-->

    <Button
        android:id="@+id/btnCreateInvoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardViewGraph"
        android:layout_centerHorizontal="true"
        android:text="Create New Invoice" />
</RelativeLayout>

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->