<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_my_invoices"
        android:icon="@drawable/outline_view_list_24"
        android:title="@string/my_invoices" />

    <item
        android:id="@+id/navigation_my_customers"
        android:icon="@drawable/outline_groups_24"
        android:title="@string/my_customers" />

    <item
        android:id="@+id/navigation_account_details"
        android:icon="@drawable/outline_account_circle_24"
        android:title="@string/account_details" />

</menu>